--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <small>© 2025 BAUZA GPT — OSINT</small>
   </footer>
 
-  <script src="app.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
 
