--- a/index.html
+++ b/index.html
@@ -127,3 +127,18 @@
   <script src="js/teaser.js"></script>
 </body>
 </html>
+<!doctype html>
+<html lang="es">
+<head>
+  <meta charset="utf-8">
+  <title>BauzaGPT</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="refresh" content="0; url=/docs/">
+  <link rel="canonical" href="/docs/">
+  <style>body{font-family:system-ui,Arial,sans-serif;padding:2rem}a{color:#7c4dff}</style>
+</head>
+<body>
+  Redirigiendo a <a href="/docs/">/docs/</a>…
+</body>
+</html>
+
