--- a/index.html
+++ b/index.html
@@ -1,144 +1,6 @@
-<!doctype html>
-<html lang="es">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BauzaGPT — Búsqueda OSINT</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <header class="topbar">
-    <div class="brand">
-      <!-- <img src="assets/logo.svg" alt="BauzaGPT" class="logo"> -->
-      <span class="logo-text">Bauza<span>GPT</span></span>
-    </div>
-    <nav class="nav">
-      <a href="#planes">Planes</a>
-      <a href="#faq">FAQ</a>
-    </nav>
-  </header>
-
-  <!-- HERO -->
-  <main class="hero">
-    <div class="hero-inner">
-      <h1>NO BUSQUES LO QUE NO QUIERES ENCONTRAR</h1>
-      <p class="subtitle">OSINT rápido, claro y accionable.</p>
-
-      <form id="searchForm" class="search">
-        <label for="q">Target de Búsqueda</label>
-        <div class="input-row">
-          <input id="q" name="q" type="text" placeholder="ejemplo.com, nombre, email, @usuario..." required>
-          <button type="submit" class="btn primary">Búsqueda Sencilla</button>
-        </div>
-      </form>
-
-      <div class="cta-row">
-        <a class="btn pro" href="pago.html">💳 Búsqueda Premium (20 MXN)</a>
-      </div>
-
-      <p class="note">La Búsqueda Premium genera un informe en PDF con resultados verificados.</p>
-    </div>
-  </main>
-
-  <!-- === VISTA PREVIA GRATIS ENMASCARADA (TEASER) === -->
-  <section id="gratis" class="teaser">
-    <h2>Vista previa GRATIS — Pro enmascarado</h2>
-    <p class="teaser-sub">Ves TODO el contenido del plan Premium, pero <strong>enmascarado</strong>. Paga para ver URLs y capturas nítidas.</p>
-
-    <div class="teaser-grid">
-      <div class="teaser-box">
-        <h3>Conteos</h3>
-        <ul id="t-counts" class="list"></ul>
-      </div>
-      <div class="teaser-box">
-        <h3>Dominios (enmascarados)</h3>
-        <ul id="t-domains" class="list"></ul>
-      </div>
-    </div>
-
-    <div class="teaser-box">
-      <h3>Matriz de hallazgos</h3>
-      <div class="table-wrap">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Fuente</th><th>Dato</th><th>Evidencia</th><th>Conf.</th><th>Enlace</th>
-            </tr>
-          </thead>
-          <tbody id="t-rows"></tbody>
-        </table>
-      </div>
-      <p class="hint">🔒 En modo gratis, las URLs y miniaturas quedan ocultas.</p>
-    </div>
-
-    <div class="teaser-box">
-      <h3>Emails / usuarios potenciales</h3>
-      <ul id="t-emails" class="list"></ul>
-    </div>
-
-    <div class="teaser-images">
-      <div class="img blurred">BORROSA</div>
-      <div class="img blurred">BORROSA</div>
-      <div class="img blurred">BORROSA</div>
-      <div class="img blurred">BORROSA</div>
-      <div class="img blurred">BORROSA</div>
-    </div>
-
-    <div class="cta-row">
-      <a class="btn primary" href="pago.html">Desbloquear Premium ($20 MXN)</a>
-      <a class="btn" href="#faq">Ver preguntas frecuentes</a>
-    </div>
-
-    <p class="note">OSINT legal. La vista previa no incluye URLs ni archivos. Para ver enlaces verificables y capturas nítidas, adquiere el plan Premium.</p>
-  </section>
-  <!-- === /TEASER === -->
-
-  <!-- PLANES -->
-  <section id="planes" class="plans">
-    <h2>Planes</h2>
-    <div class="cards">
-      <article class="card">
-        <h3>Básico</h3>
-        <p>Vista rápida de hallazgos públicos.</p>
-        <strong>$10 MXN</strong>
-      </article>
-      <article class="card featured">
-        <h3>Premium</h3>
-        <p>PDF + enlaces verificados (HTTP&lt;400), ZIP descargable.</p>
-        <strong>$20 MXN</strong>
-      </article>
-    </div>
-  </section>
-
-  <!-- FAQ -->
-  <section id="faq" class="faq">
-    <h2>Preguntas frecuentes</h2>
-    <details><summary>¿Qué incluye el PDF?</summary><p>Resumen OSINT y enlaces verificados listos para accionar.</p></details>
-    <details><summary>¿Cuánto tarda?</summary><p>Depende del objetivo; se procesa automáticamente tras validar el pago.</p></details>
-  </section>
-
-  <footer class="footer">
-    <small>© 2025 BAUZA GPT — OSINT</small>
-  </footer>
-
-  <!-- Tu script actual -->
-  <script src="js/script.js"></script>
-  <!-- Script NUEVO del teaser/desbloqueo -->
-  <script src="js/teaser.js"></script>
-</body>
-</html>
-<!doctype html>
-<html lang="es">
-<head>
-  <meta charset="utf-8">
-  <title>BauzaGPT</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="refresh" content="0; url=/docs/">
-  <link rel="canonical" href="/docs/">
-  <style>body{font-family:system-ui,Arial,sans-serif;padding:2rem}a{color:#7c4dff}</style>
-</head>
-<body>
-  Redirigiendo a <a href="/docs/">/docs/</a>…
-</body>
-</html>
-
+<!doctype html><html lang="es"><head>
+<meta charset="utf-8"><title>BauzaGPT</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta http-equiv="refresh" content="0; url=/docs/">
+<link rel="canonical" href="/docs/">
+</head><body>Redirigiendo a /docs/…</body></html>
